# GIWIFI

./: .gitignore  Readme.md
giwifi/: Cargo.toml
giwifi/src/: lib.rs  main.rs
python/: main.py  r.txt
